[gd_scene load_steps=10 format=3 uid="uid://bowa1t8nssmqe"]

[ext_resource type="Script" path="res://map/map.gd" id="1_0w3gs"]
[ext_resource type="PackedScene" uid="uid://ftaxkqoanpy0" path="res://map/Player/map_player.tscn" id="1_lo1dr"]
[ext_resource type="Texture2D" uid="uid://d0ku048oel265" path="res://sprites/Map.png" id="2_6akp4"]
[ext_resource type="Texture2D" uid="uid://djgy1sswxla0l" path="res://sprites/Button_Docks.png" id="4_wtku7"]
[ext_resource type="Texture2D" uid="uid://b3q62thvrbsv3" path="res://sprites/Button_Town.png" id="4_xgnql"]
[ext_resource type="PackedScene" uid="uid://c76dqruxme274" path="res://map/Place/map_place.tscn" id="5_6hm8e"]
[ext_resource type="Texture2D" uid="uid://hwkxn5nelv1r" path="res://sprites/Button_Lab.png" id="5_fexx8"]
[ext_resource type="Script" path="res://map/Player/PathFollow2D.gd" id="6_q2ttw"]

[sub_resource type="Curve2D" id="Curve2D_474dy"]

[node name="MapScene" type="Node2D"]
script = ExtResource("1_0w3gs")

[node name="Map" type="Sprite2D" parent="."]
texture = ExtResource("2_6akp4")
centered = false

[node name="Port" parent="." instance=ExtResource("5_6hm8e")]
position = Vector2(1112, 777)
place_image_path = ExtResource("4_wtku7")

[node name="PepperPlace" parent="." instance=ExtResource("5_6hm8e")]
position = Vector2(1046, 514)
place_image_path = ExtResource("5_fexx8")

[node name="Store" parent="." instance=ExtResource("5_6hm8e")]
position = Vector2(158, 802)
place_image_path = ExtResource("4_xgnql")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_474dy")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
rotates = false
loop = false
script = ExtResource("6_q2ttw")

[node name="MapPlayer" parent="Path2D/PathFollow2D" instance=ExtResource("1_lo1dr")]
position = Vector2(411, 764)
scale = Vector2(0.6, 0.6)

[node name="LabelBack" type="ColorRect" parent="."]
visible = false
offset_right = 1714.0
offset_bottom = 400.0
color = Color(0.486275, 0.0705882, 0.0705882, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0.733333)
offset_left = 135.0
offset_top = 75.0
offset_right = 1291.0
offset_bottom = 280.0

[node name="Label" type="Label" parent="PanelContainer"]
custom_minimum_size = Vector2(1156, 205)
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 40
autowrap_mode = 3

[connection signal="gui_input" from="Port/MapPlaceMouseControl" to="." method="_on_map_place_mouse_control_gui_input" binds= [NodePath("Port")]]
[connection signal="gui_input" from="PepperPlace/MapPlaceMouseControl" to="." method="_on_map_place_mouse_control_gui_input" binds= [NodePath("PepperPlace")]]
[connection signal="gui_input" from="Store/MapPlaceMouseControl" to="." method="_on_map_place_mouse_control_gui_input" binds= [NodePath("Store")]]
[connection signal="timeout" from="Timer" to="Store" method="_on_timer_timeout"]
[connection signal="visibility_changed" from="PanelContainer/Label" to="." method="_on_label_visibility_changed"]

[editable path="Port"]
[editable path="PepperPlace"]
[editable path="Store"]
